src/test/deca/context/invalid/created/bool.deca
// Description:
//    test comparaison booleens
// Resultats:
//    ok

{
    if ((3 > (6%2)) < true) {
        println("ok");
    }
}